--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>2048</title>
     <link rel="stylesheet" href="2048.css">
-    <script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
     <script type="text/javascript" src="support2048.js"></script>
     <script type="text/javascript" src="showannimation2048.js"></script>
     <script type="text/javascript" src="main2048.js"></script>
