--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width = device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,maximum=1.0,user-scalable=no"/>
     <title>2048</title>
     <link rel="stylesheet" href="2048.css">
     <script src="https://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
