--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width = device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,maximum=1.0,user-scalable=no"/>
     <title>2048</title>
-    <link rel="stylesheet" href="2048.css">
-    <script src="https://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="support2048.js"></script>
-    <script type="text/javascript" src="showannimation2048.js"></script>
-    <script type="text/javascript" src="main2048.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
 </head>
 <body>
     <header>
         <h1>2048</h1>
-        <a href="javascript:newgame();" id="newgamebutton">New Game</a>
-        <p>score: <span id="score">0</span></p>
+        <a href="#" id="newgamebutton">New Game</a>
+        <p>当前分数: <span id="score">0</span></p>
+        <p>最高分: <span id="highscore">0</span></p>
     </header>
 
     <div id="grid-container">
