--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
 
     <div id="grid-container">
+        <div id="cover">游戏失败，请大侠重新来过~~</div>
         <div class="grid-ceil" id="grid-cell-0-0"></div>
         <div class="grid-ceil" id="grid-cell-0-1"></div>
         <div class="grid-ceil" id="grid-cell-0-2"></div>
